[gd_scene load_steps=15 format=3 uid="uid://bsetpugwq871d"]

[ext_resource type="Script" path="res://Scenes/Enemy/BaseEnemy/script/BaseEnemy.gd" id="1_5mk64"]
[ext_resource type="Script" path="res://Scenes/Enemy/BaseEnemy/script/hitBox.gd" id="2_p0vka"]
[ext_resource type="Script" path="res://Scenes/Enemy/BaseEnemy/script/AlertNearby.gd" id="3_8lopp"]
[ext_resource type="Script" path="res://Scenes/Enemy/BaseEnemy/script/EnemyVision.gd" id="4_k76rr"]
[ext_resource type="PackedScene" uid="uid://ceqarwsivvjvk" path="res://Scenes/Enemy/BaseEnemy/assets/gaurd.glb" id="5_6e4li"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_m0p6o"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ihcv8"]
radius = 0.438853

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ov66"]

[sub_resource type="ViewportTexture" id="ViewportTexture_dlouu"]
viewport_path = NodePath("SubViewport")

[sub_resource type="SphereShape3D" id="SphereShape3D_fu0le"]

[sub_resource type="SphereShape3D" id="SphereShape3D_hjw2m"]
radius = 9.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hb3pc"]
albedo_color = Color(0.843137, 0, 0.258824, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sky1t"]
albedo_color = Color(0.941176, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iw0be"]
albedo_color = Color(0.941176, 0, 0, 1)

[node name="BaseEnemy" type="CharacterBody3D" node_paths=PackedStringArray("alertArea", "nearbyNavPointCollision", "animationPlayer")]
collision_layer = 4097
collision_mask = 4097
script = ExtResource("1_5mk64")
alertArea = NodePath("AlertNearby")
nearbyNavPointCollision = NodePath("moveToArea")
animationPlayer = NodePath("gaurd/AnimationPlayer")
SPEED = 2.5

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.12537, 0)
shape = SubResource("CapsuleShape3D_m0p6o")

[node name="gaurd_Armature_Skeleton3D#RightLeg" type="SkeletonIK3D" parent="."]
process_priority = 1

[node name="gaurd_Armature_Skeleton3D#RightLeg2" type="SkeletonIK3D" parent="."]
process_priority = 1

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_height_offset = 0.5
avoidance_enabled = true
radius = 1.0

[node name="newPositionTimeout" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="hitBox" type="Area3D" parent="." groups=["Enemy"]]
collision_layer = 513
collision_mask = 513
script = ExtResource("2_p0vka")

[node name="CollisionShape3D" type="CollisionShape3D" parent="hitBox"]
transform = Transform3D(1.19893, 0, 0, 0, 1.19893, 0, 0, 0, 1.19893, 0, 1, 0)
shape = SubResource("CapsuleShape3D_ihcv8")

[node name="SubViewport" type="SubViewport" parent="."]
size = Vector2i(214, 29)

[node name="HPbar" type="ProgressBar" parent="SubViewport"]
offset_right = 212.0
offset_bottom = 27.0
theme_override_styles/background = SubResource("StyleBoxFlat_4ov66")
max_value = 20.0
value = 20.0

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.663222, 0, 0, 0, 0.663222, 0, 0, 0, 0.663222, 0, 2.2568, 0)
billboard = 2
texture = SubResource("ViewportTexture_dlouu")

[node name="AlertNearby" type="Area3D" parent="." node_paths=PackedStringArray("BaseEnemy", "enemyVisionNode")]
collision_layer = 8392704
collision_mask = 8392704
script = ExtResource("3_8lopp")
BaseEnemy = NodePath("..")
enemyVisionNode = NodePath("../EnemyVision")

[node name="CollisionShape3D" type="CollisionShape3D" parent="AlertNearby"]
transform = Transform3D(33.6491, 0, 0, 0, 33.6491, 0, 0, 0, 33.6491, 0, 0.938479, 0)
shape = SubResource("SphereShape3D_fu0le")

[node name="moveToArea" type="Area3D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape3D" type="CollisionShape3D" parent="moveToArea"]
shape = SubResource("SphereShape3D_hjw2m")

[node name="vision" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.65623, 0)
target_position = Vector3(0, 0, -15.09)

[node name="EnemyVision" type="Area3D" parent="." node_paths=PackedStringArray("raycastHolder", "seeEnemyAlertNode")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.642458, -0.225419)
script = ExtResource("4_k76rr")
raycastHolder = NodePath("raycasts")
seeEnemyAlertNode = NodePath("../visualAlerts/SeeEnemy")

[node name="CollisionPolygon3D" type="CollisionPolygon3D" parent="EnemyVision"]
transform = Transform3D(1.03145, 3.55271e-15, 2.11758e-22, 1.60178e-22, -4.50862e-08, 1.03145, 3.55271e-15, -1.03145, -4.50862e-08, -0.516258, 1.27132, -0.431844)
depth = 3.09
polygon = PackedVector2Array(0, 0, -4, 9, 5, 9)

[node name="raycasts" type="Node3D" parent="EnemyVision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.431844)

[node name="RayCast1" type="RayCast3D" parent="EnemyVision/raycasts"]
transform = Transform3D(0.0710142, 0.0396243, -0.996688, -0.997373, -0.0114913, -0.0715199, -0.0142872, 0.999149, 0.0387041, 0.00455147, 1.14201, -0.246795)
target_position = Vector3(0, -10.26, 0)

[node name="RayCast2" type="RayCast3D" parent="EnemyVision/raycasts"]
transform = Transform3D(0.0710142, 0.0396243, -0.996688, -0.997373, -0.0114913, -0.0715199, -0.0142872, 0.999149, 0.0387041, -0.805918, 1.14201, -0.246795)
target_position = Vector3(0, -10.26, 0)

[node name="RayCast3" type="RayCast3D" parent="EnemyVision/raycasts"]
transform = Transform3D(0.0710142, 0.0396243, -0.996688, -0.997373, -0.0114913, -0.0715199, -0.0142872, 0.999149, 0.0387041, 0.925399, 1.17327, -0.246795)
target_position = Vector3(0, -10.26, 0)

[node name="RayCast4" type="RayCast3D" parent="EnemyVision/raycasts"]
transform = Transform3D(0.0710142, 0.0396243, -0.996688, -0.997373, -0.0114913, -0.0715199, -0.0142872, 0.999149, 0.0387041, -0.026633, 1.64128, -0.246795)
target_position = Vector3(0, -10.26, 0)

[node name="RayCast5" type="RayCast3D" parent="EnemyVision/raycasts"]
transform = Transform3D(0.0710142, 0.0396243, -0.996688, -0.997373, -0.0114913, -0.0715199, -0.0142872, 0.999149, 0.0387041, -0.026633, 0.396608, -0.246795)
target_position = Vector3(0, -10.26, 0)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="EnemyVision/raycasts"]
transform = Transform3D(1.91069e-15, 4.37114e-08, -1, 1, -4.37114e-08, 0, -4.37114e-08, -1, -4.37114e-08, -0.192116, 1.07936, -5.21523)
radius = 0.006
height = 10.4843
material = SubResource("StandardMaterial3D_hb3pc")

[node name="Timer" type="Timer" parent="EnemyVision"]
wait_time = 0.05
autostart = true

[node name="visualAlerts" type="Node3D" parent="."]

[node name="SeeEnemy" type="CSGBox3D" parent="visualAlerts"]
transform = Transform3D(0.713115, 0, 0, 0, 0.713115, 0, 0, 0, 0.713115, -0.0169796, 2.97668, -0.0605168)
visible = false
size = Vector3(0.27356, 0.783691, 0.23291)
material = SubResource("StandardMaterial3D_sky1t")

[node name="CSGBox3D2" type="CSGBox3D" parent="visualAlerts/SeeEnemy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.656328, 0.00742191)
size = Vector3(0.27356, 0.20459, 0.214844)
material = SubResource("StandardMaterial3D_iw0be")

[node name="gaurd" parent="." instance=ExtResource("5_6e4li")]
transform = Transform3D(0.179487, 0, -1.1705e-08, 0, 0.179487, 0, 1.1705e-08, 0, 0.179487, -0.00348075, 0, 0)

[node name="Skeleton3D" parent="gaurd/guard_skeleton" index="0"]
bones/2/position = Vector3(2.53783, 2.37879, 3.49462)
bones/2/rotation = Quaternion(-6.77787e-16, 0.184639, 1.06113e-16, 0.982806)
bones/4/position = Vector3(-0.618918, 2.37879, 3.49462)
bones/4/rotation = Quaternion(-7.40263e-16, -0.0176119, -9.77965e-18, 0.999845)
bones/6/position = Vector3(0.499252, -1.97398, 0.321824)
bones/6/rotation = Quaternion(-0.208913, 0.0244513, -0.284576, 0.935294)
bones/7/position = Vector3(0.0245249, 0.36937, 0.781092)
bones/7/rotation = Quaternion(-0.373253, -0.0346085, 0.0183494, 0.926902)
bones/8/rotation = Quaternion(0.513673, 0.0588532, -0.00950587, 0.855912)
bones/13/rotation = Quaternion(0.155901, 0.0308041, 0.00274841, 0.987289)
bones/15/position = Vector3(-0.406869, 2.08115, 0.318134)
bones/15/rotation = Quaternion(-0.173253, 0.068216, 0.0126953, 0.98243)
bones/16/position = Vector3(-0.0244629, 0.369409, 0.776437)
bones/16/rotation = Quaternion(-0.371869, 0.0346516, -0.0182611, 0.927459)
bones/17/rotation = Quaternion(0.47719, -0.0539373, 0.0126134, 0.877052)
bones/19/rotation = Quaternion(0.115876, -0.0236576, -0.000795447, 0.992982)
bones/24/position = Vector3(0.128393, -0.0124113, 5.36673)
bones/24/rotation = Quaternion(0.648853, -0.118086, -0.100073, 0.745004)
bones/25/position = Vector3(-0.928628, 1.0154, -0.283795)
bones/25/rotation = Quaternion(0.916806, -0.016651, -0.226359, -0.328559)
bones/26/rotation = Quaternion(-0.00957254, 0.983203, -0.171798, 0.0608729)
bones/28/rotation = Quaternion(0.988356, -0.00679672, 0.138834, -0.0619035)
bones/30/position = Vector3(0.904522, 0.813802, -0.0768488)
bones/30/rotation = Quaternion(0.994549, 0.00847057, 0.0923344, -0.0476993)
bones/31/position = Vector3(1.31924e-06, 2.93173, -3.97946e-08)
bones/31/rotation = Quaternion(0.00347817, 0.975345, -0.219087, 0.0262653)
bones/33/rotation = Quaternion(-0.0113663, 0.996068, -0.0614582, 0.0627923)
bones/34/position = Vector3(-1.07159, 2.27346, -0.186152)
bones/34/rotation = Quaternion(0.304444, -0.39146, -0.85024, 0.176536)
bones/35/rotation = Quaternion(0.111277, -0.236093, 0.656054, 0.708146)
bones/36/position = Vector3(-2.04469e-06, 1.97481, -4.65068e-06)
bones/36/rotation = Quaternion(-0.285305, -0.300981, -0.0643107, 0.907676)
bones/37/rotation = Quaternion(0.0281037, -0.341139, 0.109223, 0.933223)
bones/38/rotation = Quaternion(0.251591, -0.373176, 0.0678899, 0.890411)
bones/40/position = Vector3(-0.182566, 1.43285, 0.286088)
bones/40/rotation = Quaternion(0.139128, 0.0844589, 0.986231, 0.0293141)
bones/43/rotation = Quaternion(-0.00529135, -0.0989898, -0.0408195, 0.994237)
bones/47/position = Vector3(1.12843, 2.29022, 0.204624)
bones/47/rotation = Quaternion(0.679352, 0.408826, 0.605911, -0.0649136)
bones/48/rotation = Quaternion(-0.112828, 0.23103, -0.738319, 0.623522)
bones/49/rotation = Quaternion(-0.123879, 0.0604387, -0.218346, 0.966088)
bones/50/rotation = Quaternion(0.0338533, 0.345476, 0.226095, 0.910155)
bones/51/rotation = Quaternion(0.366962, 0.399846, -0.233675, 0.806758)
bones/60/position = Vector3(-1.60309, 2.50876, -0.302267)
bones/60/rotation = Quaternion(-0.052463, 0.465238, 0.791175, -0.393501)
bones/62/rotation = Quaternion(0.029852, 0.950832, 0.210568, -0.225141)
bones/63/rotation = Quaternion(0.324541, -0.0127113, 0.0320712, 0.945242)
bones/64/rotation = Quaternion(0.912434, -4.09224e-07, -9.12434e-07, -0.409224)
bones/66/position = Vector3(1.35722, 2.43835, -0.588308)
bones/66/rotation = Quaternion(0.148643, 0.530648, 0.760357, 0.343766)

[node name="p90" parent="gaurd/guard_skeleton/Skeleton3D" index="2"]
transform = Transform3D(1, 0, -5.93176e-08, 0, 1, 0, 5.93176e-08, 0, 1, 0, 0, 0)

[connection signal="navigation_finished" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_navigation_finished"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="timeout" from="newPositionTimeout" to="." method="setMovementTarget"]
[connection signal="area_entered" from="AlertNearby" to="AlertNearby" method="newNearbyHidespot"]
[connection signal="body_entered" from="AlertNearby" to="AlertNearby" method="newNearUnit"]
[connection signal="area_entered" from="moveToArea" to="." method="newNavPoint"]
[connection signal="body_entered" from="EnemyVision" to="EnemyVision" method="_on_body_entered"]
[connection signal="body_exited" from="EnemyVision" to="EnemyVision" method="_on_body_exited"]
[connection signal="timeout" from="EnemyVision/Timer" to="EnemyVision" method="updateVision"]

[editable path="gaurd"]
